k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scoreops-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
    - hosts:
        - scoreops.fr
      secretName: scoreops-tls
  rules:
    - host: scoreops.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: scoreops-backend-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scoreops-frontend-service
                port:
                  number: 80
